# letta-compose

./: .env.example  .gitignore  OPTIMIZE_KV_CACHE.md  README.md  compose.yaml  init.sql  main.py  otel-collector-config.yaml  pyproject.toml
crates/: Cargo.toml
crates/letta-example/: Cargo.toml
crates/letta-example/src/: main.rs
crow/: Dockerfile  pyproject.toml
crow/alembic/: env.py
crow/alembic/versions/: 0335b1eb9c40_add_batch_item_id_to_messages.py  066857381578_add_approvals_field_to_messages.py  068588268b02_add_vector_db_provider_to_archives_table.py  08b2f8225812_adding_toolsagents_orm.py  0b496eae90de_add_file_agent_table.py  0ceb975e0063_add_llm_batch_jobs_tables.py  167491cfb7a8_add_identities_for_blocks.py  18e300709530_add_instructions_field_to_sources.py  1af251a42c06_fix_files_agents_constraints.py  1c6b6a38b713_add_pip_requirements_to_tools.py  1c8880d671ee_make_an_blocks_agents_mapping_table.py  1dc0fee72dea_add_block_related_indexes.py  1e553a664210_add_metadata_to_tools.py  220856bbf43b_add_read_only_column.py  22a6e413d89c_remove_module_field_on_tool.py  25fc99e97839_fix_alembic_check_warnings.py  28b8765bdd0a_add_support_for_structured_outputs_in_.py  2c059cad97cc_create_sqlite_baseline_schema.py  2cceb07c2384_add_content_parts_to_message.py  2f4ede6ae33b_add_otid_and_tool_return_to_message.py  341068089f14_add_preserve_on_migration_to_block.py  348214cbc081_add_org_agent_id_indices.py  373dabcba6cf_add_byok_fields_and_unique_constraint.py  3c683a662c82_migrate_jobs_to_the_orm.py  400501b04bf0_add_per_agent_environment_variables.py  416b9d2db10b_repurpose_jobusagestatistics_for_new_.py  46699adc71a7_add_unique_constraint_to_source_names_.py  47d2277e530d_add_total_chunks_and_chunks_embedded_to_.py  495f3f474131_write_source_id_directly_to_files_agents.py  4c6c9ef0387d_support_modal_sandbox_type.py  4e88e702f85e_drop_api_tokens_table_in_oss.py  51999513bcf1_steps_feedback_field.py  549eff097c71_update_identities_unique_constraint_and_.py  54c76f7cabca_add_tags_to_passages_and_create_passage_.py  54dec07619c4_divide_passage_table_into_.py  54f2311edb62_add_args_schema_to_tools.py  56254216524f_add_custom_headers_to_mcp_server.py  5987401b40ae_refactor_agent_memory.py  60ed28ee7138_add_project_id_to_step_model.py  614c4e53b66e_add_unique_constraint_to_file_id_and_.py  (+71 more)
crow/crow/: __init__.py  agent.py  config.py  constants.py  errors.py  interface.py  log.py  main.py  memory.py  settings.py  streaming_interface.py  streaming_utils.py  system.py  utils.py  validators.py
crow/crow/adapters/: crow_llm_adapter.py  crow_llm_request_adapter.py  crow_llm_stream_adapter.py  simple_llm_request_adapter.py  simple_llm_stream_adapter.py
crow/crow/agents/: agent_loop.py  base_agent.py  base_agent_v2.py  crow_agent.py  crow_agent_batch.py  crow_agent_v2.py  crow_agent_v3.py  ephemeral_agent.py  (+4 more)
crow/fern/: fern.config.json  generators.yml  openapi.json
crow_ide/: CLAUDE.md  CROW_GRAND_VISION.md  DISTILLATION_DESIGN.md  PROGRESS.md  RALPH_STATE.md  README.md  __init__.py  acp_bridge.py  db.py  flowchart.mermaid  mock_agent.py  ordoliberalism_neoliberalism_relationship.mmd  pyproject.toml  server.py
crow_ide/.karla/: settings.local.json
crow_ide/api/: __init__.py  files.py  terminal.py
crow_ide/flask_api_test/: routes.py
crow_ide/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
crow_ide/frontend/src/: App.css  App.tsx  index.css
crow_ide/frontend/src/components/: AgentPanel.css  AgentPanel.tsx  CodeHighlighter.tsx  DirectoryBrowser.tsx  FileTree.css  FileTree.tsx  ResizeHandle.tsx  TabbedTerminal.css  TabbedTerminal.tsx  Terminal.css  Terminal.tsx  WorkspaceSelector.tsx
crow_ide/frontend/src/components/acp/: adapters.ts  agent-docs.tsx  agent-panel.css  agent-panel.tsx  agent-selector.tsx  blocks.tsx  common.tsx  context-utils.ts  file-attachment.tsx  index.ts  markdown-renderer.tsx  model-selector.tsx  prompt.ts  scroll-to-bottom-button.tsx  session-history.tsx  session-tabs.tsx  state.ts  thread.tsx  todo-panel.tsx  types.ts  utils.ts
crow_ide/frontend/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  popover.tsx  select.tsx  tooltip.tsx
crow_ide/tests/: __init__.py  test_acp_bridge.py  test_file_api.py  test_server.py  test_terminal.py
crow_ide/tests/e2e/: playwright_harness.py  test_agent_e2e.py  test_integration.py  test_playwright.py
goal-site/: index.html
karla/: .gitignore  ACP_PLAN.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LETTACODE_KARLA_COMPARISON.md  PLAN.md  README.md  SLASH_COMMANDS_PLAN.md  karla.example.yaml  karla.yaml  main.py  pyproject.toml
karla/.claude/: ralph-loop.local.md  ralph-tool-test-progress.md
karla/.karla/: settings.local.json
karla/evals/: create_agent.py  dataset.jsonl  setup.py  suite.yaml  test_sequential.py  tool_executor.py
karla/scripts/: langfuse_traces.py  test_acp.py  test_acp_tool_content.py  test_cancel.py  test_hotl_acp.py  test_raw_acp.py  test_raw_acp.sh  test_tool_call.py
karla/skills/creating-skills/: SKILL.md
karla/src/karla/: __init__.py  __main__.py  acp_server.py  agent.py  agent_loop.py  cli.py  config.py  context.py  crow.py  executor.py  headless.py  hooks.py  letta.py  memory.py  registry.py  settings.py  skills.py  tool.py
karla/src/karla/commands/: __init__.py  agents.py  config.py  context.py  core.py  dispatcher.py  hotl.py  prompts.py  registry.py
karla/src/karla/hotl/: __init__.py  loop.py  state.py
karla/src/karla/prompts/: __init__.py  human.md  karla_main.md  memory_blocks.py  persona.md  project.md
karla/src/karla/tools/: __init__.py  ask_user.py  bash.py  bash_background.py  edit.py  glob.py  grep.py  plan_mode.py  read.py  skill.py  task.py  todo.py  web_fetch.py  web_search.py  write.py
karla/tests/: __init__.py  test_behavior_loop.py  test_config.py  test_context.py  test_crow_e2e.py  test_e2e.py  test_integration.py  test_letta_e2e.py  test_prompts.py  test_settings.py  test_skills.py  test_tools.py
site/: index.html
(+359 files in other folders)
