[project]
name = "letta-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "letta-client",
]

[tool.uv.sources]
letta-client = { git = "https://github.com/odellus/letta-python.git", rev = "5a1c107553619dacac5747b08af504eef9487647" }
letta-evals = { git = "https://github.com/odellus/letta-evals.git", rev = "f22f8fd8500041bcb4407a231590868e7af46cf6" }

[tool.uv.workspace]
members = ["larry", "karla"]
