[project]
name = "crow-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "crow-client",
    "openai>=2.14.0",
]

[tool.uv.sources]
crow-client = { workspace = true }

[tool.uv.workspace]
members = ["larry", "karla", "crow", "crow-python"]
