[project]
name = "crow-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "letta-client",
    "openai>=2.14.0",
    "marimo[recommended]>=0.18.4",
    # crow_ide deps
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
letta-client = { workspace = true }

[tool.uv.workspace]
members = ["karla", "letta", "letta-python"]
