[project]
name = "crow-ide"
version = "0.1.0"
dependencies = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
exclude = [
    "frontend/node_modules",
    "frontend/src",
    "flask_api_test",
    "tests",
    "*.md",
    "*.egg-info",
]
