[project]
name = "karla"
version = "0.1.0"
description = "A Python coding agent with Crow backend and ACP support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crow-client",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "html2text>=2024.2",
    "langfuse>=2.0",
    "agent-client-protocol",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv.sources]
crow-client = { workspace = true }
agent-client-protocol = { path = "../python-sdk", editable = true }

[project.scripts]
karla-cli = "karla.cli:main"
karla-acp = "karla.acp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/karla"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require running Crow server)",
]
